--- a/css/responsive.css
+++ b/css/responsive.css
@@ -198,7 +198,7 @@
     }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1199px) {
     .product-thumb:hover a.quickview {
         top: 15%;
     }
@@ -206,12 +206,9 @@
         top: 30%;
     }
 
-    .carousel-inner>.item>img {
+    /* .carousel-inner>.item>img {
         height: 300px;
-    }
-    div.slidder {
-        height: 300px;
-    }
+    } */
     .bx-wrapper{
           max-width: 495px !important;
     }
@@ -225,6 +222,11 @@
     .collapse{
         //  display: block;
     }
+	div.slidder {
+		/* height: 300px; */
+		height: auto;
+		margin-bottom: 30px;
+    }
 }
 /* Portrait tablets and small desktops */
 /*@media (min-width: 768px) and (max-width: 991px) {
@@ -237,12 +239,12 @@
         text-align: center;
         margin-top: 20px;
     }
-    .carousel-inner>.item>img {
+    /* .carousel-inner>.item>img {
         height: 200px;
-    }
-    div.slidder {
+    } */
+    /* div.slidder {
         height: 200px;
-    }
+    } */
     .box h3, .box-heading h3{
         text-align: center;
     }
@@ -355,4 +357,48 @@ and (orientation: landscape) {
 	.dropdown-toggle:before {
 		content: "\00a0";
 	}
-} 
+}
+@media only screen and (max-width: 368px) {
+	.box-cart {
+		padding: 11px;
+	}
+	.dropdown-toggle:before {
+		content: "\00a0";
+	}
+	#item-count::after {
+		content: none;
+	}
+	.fa-caret-down:before {
+		content: none;
+	}
+}
+@media (min-width: 768px) and (max-width: 992px) {
+	div.slidder {
+		/* height: 224px; */
+		height: auto;
+		margin-bottom: 30px;
+	}
+}
+@media only screen and (max-width: 767px) {
+	div#slidder-sm {
+		height: auto;
+		margin-bottom: 30px;
+		display: block !important;
+	}
+	div#slidder {
+		display: none !important;
+	}
+}
+@media only screen and (min-width: 767px) {
+	div#slidder-sm {
+		display: none !important;
+	}
+	div#slidder {
+		display: block !important;
+	}
+}
+@media only screen and (max-width: 380px) {
+	header #search {
+		width: initial;
+	}
+}
